added personal information in regards to exercise 3

--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 Welcome and hello :)
-    1st change, run Hans, run..
+    Just call me Oli, 37 years old. Love all kinds of foods, especially spicy and asian cuisine. 
+    My word of the day is "repo", short for repository. So basically a folder and all it's contents.
